@@ -1,3 +1,6 @@
+2014-03-18 Stanislas Rolland  <typo3(arobas)sjbr.ca>
+	* Resolves #56989: getUserObj vs makeInstance on tslib_cObj in 3.1.0
+
 2014-03-13 Stanislas Rolland  <typo3(arobas)sjbr.ca>
 	* Update manual
 	* Clean initialisation
